quick css fix for form and project padding on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -323,6 +323,7 @@ h1.intro {
   margin-bottom: 10px;
   border: 1.6px solid var(--dark-primary-color);
   border-radius: 2px;
+  padding: 4px;
 }
 
 textarea {
@@ -331,6 +332,7 @@ textarea {
   width: 100%;
   border: 1.6px solid var(--dark-primary-color);
   border-radius: 2px;
+  padding: 4px;
   
 }
 
@@ -436,6 +438,7 @@ footer {
     align-items: center;
     max-width: 344px;
     margin: 35px auto;
+    padding: 0 18px;
   }
 
   .project-img {
